@@ -374,7 +374,7 @@ titleRemoval: true
 #                                                        |___/      #
 #                                                                   #
 #####################################################################
-# All settings dependong on the score aspect of this plugin
+# All settings depending on the score aspect of this plugin
 # For integrations of other plugins with score see the bottom section of the config
  
 
